# neuronephys_clean

./: .gitattributes  .gitignore  CUBIC_regionID_lookup_no_comma.json  Dockerfile  Dockerfile.wholebrain  README.md  coupling.cu  coupling.cuh  density_matters.cu  electrode_net.cu  electrode_net.cuh  ephys.cu  graphics.h  main.cu  morphology.cpp  network_factory.cuh  regions_tree.cpp  regions_tree.h  scn_atlas.h5
ann/: CMakeLists.txt
ann/include/ANN/: ANN.h  ANNperf.h  ann_export.h
ann/src/: perf.cpp
flavors/: lxde.yml
src/: CMakeLists.txt  FindANN.cmake  circadian.cpp  circadian.h  circtable.csv  coupling.cu  coupling.cuh  defines.cu  defines.cuh  electrode_net.cu  electrode_net.cuh  ephys.cu  ephys.cuh  graphics.cpp  graphics.h  hebbian.cu  main.cu  morphology.cpp  morphology.h  mouse_cortex.cuh  network_factory.cu  network_factory.cuh  paracrine.cu  paracrine.cuh
src/Shaders/: frag.glsl  tex_frag.glsl  tex_vert.glsl  vert.glsl
src_wholebrain/: CMakeLists.txt  electrode_net.cuh  hebbian.cuh  main.cu  morphology.cpp  morphology.h  mouse_cortex.cu  network_factory.cu  regions_tree.cpp  regions_tree.h
src_wholebrain/Shaders/: frag.glsl  vert.glsl
src_wholebrain/nlohmann/: json.hpp
